# graphics-algebra-benchmark

./: CMakeLists.txt  README.md  clean.ps1  run.ps1  setup.ps1  setupnbuild.ps1  vcpkg.json
docs/developer/: references.md
src/: common.h  frame_buffer.h  geometry.cc  geometry.h  main.cc  pipeline.cc  pipeline.h
